<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title_param"
        android:layout_width="match_parent"
        android:background="@color/primaryColor2"
        android:layout_height="@dimen/dimen40dp">

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:text="@string/change_password"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"></TextView>


    </RelativeLayout>

    <EditText
        android:layout_below="@+id/title_param"
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:hint="@string/old_password"
        android:paddingStart="@dimen/dimen10dp"
        android:layout_margin="@dimen/dimen10dp"
        android:background="@drawable/rounded_corner_gray_frame_white_solid"
        android:layout_height="@dimen/dimen40dp"></EditText>

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:hint="@string/new_password"
        android:paddingStart="@dimen/dimen10dp"

        android:layout_below="@+id/old_password"
        android:layout_margin="@dimen/dimen10dp"
        android:background="@drawable/rounded_corner_gray_frame_white_solid"
        android:layout_height="@dimen/dimen40dp"></EditText>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:hint="@string/confirm_password"
        android:paddingStart="@dimen/dimen10dp"

        android:layout_below="@+id/new_password"
        android:layout_margin="@dimen/dimen10dp"
        android:background="@drawable/rounded_corner_gray_frame_white_solid"
        android:layout_height="@dimen/dimen40dp"></EditText>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="@dimen/dimen10dp"
        android:layout_marginBottom="@dimen/dimen15dp"
        android:background="@color/color_loginbg_n"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/confirm_password"
        android:layout_height="@dimen/dimen40dp"></Button>



</RelativeLayout>