<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SetUpDashboardActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/bill_house_lock"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_printer_setup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/colorPrimary"
                android:text="@string/printer_setup"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_paper_roll_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/colorPrimary"
                android:text="@string/paper_roll_type"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_get_localdb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/colorPrimary"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="Export DB!!"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_update_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/colorPrimary"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/update_app"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_overridebilling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/colorPrimary"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="Override Billing"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_scan_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/colorPrimary"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/scan_bluetooth_device"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_camera_setup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/colorPrimary"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/camera_setup_check"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_get_gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/colorPrimary"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/get_gps_co_ordinate"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>